* important changes in verison 1.39_03 26/08/2008:
- Because all the IO::Compress modules are interlinked, they must be 
  the same version when installed, or breakage will occur like shown
  at this tester report:
    
    http://www.nntp.perl.org/group/perl.cpan.testers/2008/08/msg2083310.html
  
  Mailed the author to find a less fragile solution, but for now we require
  all the individual modules, and all at the same version.

* important changes in version 1.39_02 25/08/2008:
- Address #31806: Please add support for bzipped tar files.
  Archive::Tar now supports reading/writing tar.bz2 files.
- Since IO::Zlib is now core, it is now a default dependency.
- Added Package::Constants as a dependency to ease the use of A::T::Constants
- Dependency on IO::Compress::Bzip2 and IO::Uncompress::Bunzip2 is on
  by default, but can be negated with the -n switch when building:
  'perl Makefile.PL -n'
- Improve documentation on the new ->iter function

* important changes in version 1.39_01 22/08/2008:
- Address the second part mentioned in this report:
  #30380: directory traversal vulnerability in Archive-Tar
  Archives are no longer allowed to extract into symlinked directories,
  unless Insecure Extract Mode is enabled (which is off by default).
- Add regression tests for this behaviour
- Address #33669 (Could not update timestamp warning on symlinks)
  Don't update timestamps on symlinks, they'll modify the original
- Apply core patch: [patch@33971] Archive::Tar was building corrupt
  archives on VMS as supplied by John Malmberg
- Address #37375: ptar should allow '-' as an archive_file name
  Patch provided by glenn jackman
- Add convenience method ->extract() to A::T::File
- improve docs of A::T::File by adding rv & object in the header
- Address #38580: [PATCH] Archive::Tar-&gt;iter
  This adds an iterator to Archive::Tar, thanks to Gisle Aas

* important changes in version 1.38    14/12/2007:
- Promote 1.37_01 to stable.
